--- a/web/src/main/webapp/style/css.css
+++ b/web/src/main/webapp/style/css.css
@@ -217,6 +217,7 @@ img{border:none;}
 .three_contact a:nth-child(1):before{content:"";position:absolute;left:20px;top:10px;width:20px;height:28px;background:url(../image/qq.png) no-repeat;}
 .three_contact a:nth-child(2):before{content:"";position:absolute;left:20px;top:10px;width:20px;height:28px;background:url(../image/yy.png) no-repeat;}
 .three_contact a:nth-child(3):before{content:"";position:absolute;left:20px;top:10px;width:22px;height:28px;background:url(../image/mail.png) no-repeat;}
+.three_contact a:nth-child(4):before{content:"";position:absolute;left:20px;top:10px;width:22px;height:28px;background:url(../image/yy.png) no-repeat;}
 
 .wgn_title{line-height:70px;text-align:center;position:relative;font-size:16px;font-weight:bold;}
 .next_set_s{position:absolute;left:0;top:15px;}
